--- a/xyzreader/XYZReader/src/main/res/values/colors.xml
+++ b/xyzreader/XYZReader/src/main/res/values/colors.xml
@@ -23,4 +23,7 @@
     <color name="theme_accent">#FF4081</color>
     <color name="ltgray">#ffe0e0e0</color>
     <color name="text_color">#666464</color>
+    <color name="black_transparent_40">#66000000</color>
+    <color name="white">#ffffff</color>
+    <color name="gray">#C0C0C0</color>
 </resources>
